@@ -72,6 +72,7 @@ Template for new versions:
 ## Lua
 - ``dfhack.gui.getSelectedJob``: can now return the job with a destination under the keyboard cursor (e.g. digging/carving/engraving jobs)
 - ``widgets.makeButtonLabelText``: create text and graphical buttons from character/color/tile maps and/or dynamically loaded tilesets
+- ``widgets.DimensionsTooltip``: reusable selected dimensions tooltip that follows the mouse cursor around
 
 ## Removed
 
